(library
 (name calc_lib)
 (modules eval llvm ast lexer parser typing env mem))

(ocamllex
 (modules lexer))

(ocamlyacc
 (modules parser))

(executables
 (public_names calc calcc simple_test)
 (names calc calcc simple_test)
 (modules calc calcc simple_test)
 (flags
  (:standard -w -32 -w -33))
 (libraries calc_lib))
