(library
 (name calc_lib)
 (modules eval llvm ast lexer parser typing env mem calc_types optimize))

(ocamllex
 (modules lexer))

(ocamlyacc
 (modules parser))

(executables
 (public_names calc calcc interpreter_tests)
 (names calc calcc interpreter_tests)
 (modules calc calcc interpreter_tests)
 (flags
  (:standard -w -32 -w -33))
 (libraries calc_lib))
